update code with the things
added some stuff for settings and a little bit of contacts stuff

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -6,12 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".settings">
 
-    <TextView
+    <FrameLayout
+        android:id="@+id/idFrameLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="settings"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:layout_height="match_parent" />
 
     <Button
         android:id="@+id/qr"
