--- a/app/src/main/res/layout/activity_scan.xml
+++ b/app/src/main/res/layout/activity_scan.xml
@@ -15,49 +15,57 @@
 
     <Button
         android:id="@+id/qr"
-        android:layout_width="100dp"
+        android:layout_width="wrap_content"
         android:layout_height="75dp"
         android:layout_marginStart="1dp"
+        android:layout_marginEnd="310dp"
         app:icon="@drawable/qr_icon"
-        app:iconSize="40dp"
         app:iconGravity="textStart"
+        app:iconSize="40dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/scan"
-        android:layout_width="100dp"
+        android:layout_width="wrap_content"
         android:layout_height="75dp"
         android:layout_alignParentTop="true"
         android:layout_marginStart="104dp"
+        android:layout_marginEnd="207dp"
         app:icon="@drawable/scan_icon"
-        app:iconSize="40dp"
         app:iconGravity="textStart"
+        app:iconSize="40dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/contacts"
-        android:layout_width="100dp"
+        android:layout_width="wrap_content"
         android:layout_height="75dp"
         android:layout_centerHorizontal="true"
+        android:layout_marginStart="207dp"
         android:layout_marginEnd="104dp"
         app:icon="@drawable/contacts_icon"
-        app:iconSize="40dp"
         app:iconGravity="textStart"
+        app:iconSize="40dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/settings"
-        android:layout_width="100dp"
+        android:layout_width="wrap_content"
         android:layout_height="75dp"
         android:layout_centerHorizontal="true"
+        android:layout_marginStart="310dp"
         android:layout_marginEnd="1dp"
         app:icon="@drawable/settings_icon"
-        app:iconSize="40dp"
         app:iconGravity="textStart"
+        app:iconSize="40dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
