nested settings and logout functionality

--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -24,8 +24,8 @@
         android:id="@+id/qr"
         android:layout_width="wrap_content"
         android:layout_height="75dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginEnd="310dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="300dp"
         app:icon="@drawable/qr_icon"
         app:iconGravity="textStart"
         app:iconSize="40dp"
@@ -38,13 +38,14 @@
         android:layout_width="wrap_content"
         android:layout_height="75dp"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="104dp"
-        android:layout_marginEnd="207dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginEnd="200dp"
         app:icon="@drawable/scan_icon"
         app:iconGravity="textStart"
         app:iconSize="40dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.666"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
@@ -52,8 +53,8 @@
         android:layout_width="wrap_content"
         android:layout_height="75dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="207dp"
-        android:layout_marginEnd="104dp"
+        android:layout_marginStart="200dp"
+        android:layout_marginEnd="100dp"
         app:icon="@drawable/contacts_icon"
         app:iconGravity="textStart"
         app:iconSize="40dp"
@@ -66,8 +67,8 @@
         android:layout_width="wrap_content"
         android:layout_height="75dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="310dp"
-        android:layout_marginEnd="1dp"
+        android:layout_marginStart="300dp"
+        android:layout_marginEnd="10dp"
         app:icon="@drawable/settings_icon"
         app:iconGravity="textStart"
         app:iconSize="40dp"
