--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -5,59 +5,39 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/img_1"
-    tools:context=".MainActivity">
+    tools:context=".ForgetPasswordActivity">
 
     <EditText
-        android:id="@+id/username"
+        android:id="@+id/emailforget"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="300dp"
+        android:layout_marginTop="400dp"
         android:hint="Email" />
 
-    <EditText
-        android:id="@+id/password"
-        android:layout_width="350dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/username"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
-        android:hint="Password" />
-
     <Button
-        android:id="@+id/loginbutton"
+        android:id="@+id/forgetbutton"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/password"
+        android:layout_below="@id/emailforget"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
         android:background="@drawable/outline_button"
-        android:text="Login" />
+        android:text="Reset Password" />
 
     <Button
-        android:id="@+id/registerbutton"
+        android:id="@+id/redirecthome"
         android:layout_width="100dp"
         android:layout_height="30dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="420dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="600dp"
         android:background="@android:color/transparent"
-        android:text="Sign Up"
-        android:textColor="@color/black"
-        android:textSize="10dp" />
-
-    <Button
-        android:id="@+id/forgetpass"
-        android:layout_width="100dp"
-        android:layout_height="30dp"
-        android:layout_marginLeft="280dp"
-        android:layout_marginTop="420dp"
-        android:background="@android:color/transparent"
-        android:text="Forget Password"
+        android:text="Login"
         android:textColor="@color/black"
         android:textSize="10dp" />
 
     <ProgressBar
-        android:id="@+id/progressBar1"
+        android:id="@+id/forgetProgressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
