--- a/app/src/main/res/layout/activity_scan.xml
+++ b/app/src/main/res/layout/activity_scan.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".scan">
+    tools:context=".scan"
+    android:background="@drawable/img_1">
 
     <Button
         android:id="@+id/qr"
@@ -12,7 +13,8 @@
         android:layout_height="75dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="300dp"
-        app:icon="@drawable/qr_icon"
+        android:background="@drawable/outline_button"
+        app:icon="@drawable/qr_icon_black"
         app:iconGravity="textStart"
         app:iconSize="40dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -26,6 +28,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="100dp"
         android:layout_marginEnd="200dp"
+        android:background="@drawable/outline_button"
         app:icon="@drawable/scan_icon"
         app:iconGravity="textStart"
         app:iconSize="40dp"
@@ -41,6 +44,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginStart="200dp"
         android:layout_marginEnd="100dp"
+        android:background="@drawable/outline_button"
         app:icon="@drawable/contacts_icon"
         app:iconGravity="textStart"
         app:iconSize="40dp"
@@ -55,6 +59,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginStart="300dp"
         android:layout_marginEnd="10dp"
+        android:background="@drawable/outline_button"
         app:icon="@drawable/settings_icon"
         app:iconGravity="textStart"
         app:iconSize="40dp"
@@ -68,7 +73,9 @@
         android:layout_height="75dp"
         android:layout_marginEnd="152dp"
         android:layout_marginBottom="300dp"
+        android:background="@drawable/outline_button"
         android:text="launch\nscanner"
+        android:textColor="@color/black"
         app:iconGravity="textStart"
         app:iconSize="40dp"
         app:layout_constraintBottom_toBottomOf="parent"
