--- a/app/src/main/res/drawable/outline_button.xml
+++ b/app/src/main/res/drawable/outline_button.xml
@@ -2,9 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle"
     >
+    <corners android:radius="10dp"/>
     <solid android:color="@android:color/transparent" />
 
     <stroke
-        android:width="2dp"
+        android:width="4dp"
         android:color="@color/black" />
 </shape>
