--- a/app/src/main/res/layout/activity_contacts.xml
+++ b/app/src/main/res/layout/activity_contacts.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".contacts">
+    tools:context=".contacts"
+    android:background="@drawable/img_1">
 
     <TextView
         android:layout_width="match_parent"
@@ -19,7 +20,8 @@
         android:layout_height="75dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="300dp"
-        app:icon="@drawable/qr_icon"
+        android:background="@drawable/outline_button"
+        app:icon="@drawable/qr_icon_black"
         app:iconGravity="textStart"
         app:iconSize="40dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -33,6 +35,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="100dp"
         android:layout_marginEnd="200dp"
+        android:background="@drawable/outline_button"
         app:icon="@drawable/scan_icon"
         app:iconGravity="textStart"
         app:iconSize="40dp"
@@ -48,6 +51,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginStart="200dp"
         android:layout_marginEnd="100dp"
+        android:background="@drawable/outline_button"
         app:icon="@drawable/contacts_icon"
         app:iconGravity="textStart"
         app:iconSize="40dp"
@@ -62,6 +66,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginStart="300dp"
         android:layout_marginEnd="10dp"
+        android:background="@drawable/outline_button"
         app:icon="@drawable/settings_icon"
         app:iconGravity="textStart"
         app:iconSize="40dp"
