--- a/app/src/main/res/layout/activity_contacts.xml
+++ b/app/src/main/res/layout/activity_contacts.xml
@@ -8,6 +8,7 @@
     android:background="@drawable/img_1">
 
     <TextView
+        android:id="@+id/text"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="contacts"
@@ -76,7 +77,8 @@
 
     <ExpandableListView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@id/settings"
         android:id="@+id/list"
         tools:ignore="MissingConstraints" />
 
