added more contact info / changed theme colors

--- a/app/src/main/res/layout/activity_contacts.xml
+++ b/app/src/main/res/layout/activity_contacts.xml
@@ -23,6 +23,7 @@
         android:layout_marginEnd="300dp"
         android:background="@drawable/outline_button"
         app:icon="@drawable/qr_icon_black"
+        app:iconTint="@color/black"
         app:iconGravity="textStart"
         app:iconSize="40dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -38,6 +39,7 @@
         android:layout_marginEnd="200dp"
         android:background="@drawable/outline_button"
         app:icon="@drawable/scan_icon"
+        app:iconTint="@color/black"
         app:iconGravity="textStart"
         app:iconSize="40dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -54,6 +56,7 @@
         android:layout_marginEnd="100dp"
         android:background="@drawable/outline_button"
         app:icon="@drawable/contacts_icon"
+        app:iconTint="@color/black"
         app:iconGravity="textStart"
         app:iconSize="40dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -69,6 +72,7 @@
         android:layout_marginEnd="10dp"
         android:background="@drawable/outline_button"
         app:icon="@drawable/settings_icon"
+        app:iconTint="@color/black"
         app:iconGravity="textStart"
         app:iconSize="40dp"
         app:layout_constraintBottom_toBottomOf="parent"
