--- a/app/src/main/res/layout/activity_scan.xml
+++ b/app/src/main/res/layout/activity_scan.xml
@@ -15,6 +15,7 @@
         android:layout_marginEnd="300dp"
         android:background="@drawable/outline_button"
         app:icon="@drawable/qr_icon_black"
+        app:iconTint="@color/black"
         app:iconGravity="textStart"
         app:iconSize="40dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -30,6 +31,7 @@
         android:layout_marginEnd="200dp"
         android:background="@drawable/outline_button"
         app:icon="@drawable/scan_icon"
+        app:iconTint="@color/black"
         app:iconGravity="textStart"
         app:iconSize="40dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -46,6 +48,7 @@
         android:layout_marginEnd="100dp"
         android:background="@drawable/outline_button"
         app:icon="@drawable/contacts_icon"
+        app:iconTint="@color/black"
         app:iconGravity="textStart"
         app:iconSize="40dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -61,6 +64,7 @@
         android:layout_marginEnd="10dp"
         android:background="@drawable/outline_button"
         app:icon="@drawable/settings_icon"
+        app:iconTint="@color/black"
         app:iconGravity="textStart"
         app:iconSize="40dp"
         app:layout_constraintBottom_toBottomOf="parent"
