--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -20,6 +20,7 @@
         android:layout_marginEnd="300dp"
         android:background="@drawable/outline_button"
         app:icon="@drawable/qr_icon_black"
+        app:iconTint="@color/black"
         app:iconGravity="textStart"
         app:iconSize="40dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -35,6 +36,7 @@
         android:layout_marginEnd="200dp"
         android:background="@drawable/outline_button"
         app:icon="@drawable/scan_icon"
+        app:iconTint="@color/black"
         app:iconGravity="textStart"
         app:iconSize="40dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -51,6 +53,7 @@
         android:layout_marginEnd="100dp"
         android:background="@drawable/outline_button"
         app:icon="@drawable/contacts_icon"
+        app:iconTint="@color/black"
         app:iconGravity="textStart"
         app:iconSize="40dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -66,6 +69,7 @@
         android:layout_marginEnd="10dp"
         android:background="@drawable/outline_button"
         app:icon="@drawable/settings_icon"
+        app:iconTint="@color/black"
         app:iconGravity="textStart"
         app:iconSize="40dp"
         app:layout_constraintBottom_toBottomOf="parent"
