button design consistency

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,9 +35,10 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
-        android:background="@android:drawable/editbox_background_normal"
+        android:background="@drawable/outline_button"
         android:backgroundTint="#FF0000"
         android:text="Login"
+        android:textColor="@color/black"
         app:iconTint="#3649B3"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
