--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -23,7 +23,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
         android:background="@drawable/outline_button"
-        android:text="Reset Password" />
+        android:text="Reset Password"
+        android:textColor = "@color/black"/>
 
     <Button
         android:id="@+id/redirecthome"
@@ -31,7 +32,7 @@
         android:layout_height="30dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="600dp"
-        android:background="@android:color/transparent"
+        android:background="@drawable/outline_button"
         android:text="Login"
         android:textColor="@color/black"
         android:textSize="10dp" />
